# mdbook-generate-summary

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  markdown_summary_generator.rs  summary_generator.rs
