[package]
name = "mdbook-generate-summary"
authors = ["Robert Lawson"]
license = "MIT"
description = "Preprocessor for mdbook to generate the SUMMARY.md"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Robert-maker1994/mdbook-generate-summary"


[dependencies]
clap = "4.5.21"
mdbook = "0.4.42"
serde = "1.0.215"
serde_json = "1.0.133"
